# r-nn

./: .gitignore  Cargo.toml  README.md
examples/: mnist_mlp.rs  rnn.rs
examples/gpt2/: README.md  main.rs  tokenizer.rs  transformer.rs
src/: lib.rs
src/core/: mod.rs  value.rs
src/core/tensor/: matmul.rs  mod.rs  tensor_ops.rs
src/core/value/: mod.rs  value_ops.rs
src/nn/: embedding.rs  gelu.rs  layernorm.rs  linear.rs  mod.rs  relu.rs  tanh.rs
src/nn/optim/: base_sgd.rs  mod.rs
tests/: simple_mlp_nn.rs  simple_mlp_raw.rs
