[package]
name = "r-nn"
version = "0.1.0"
edition = "2021"

[lib]
name = "r_nn"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"


[dev-dependencies]
image = "0.25.1"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
regex = "1.10.5"
npy = "0.4.0"